tests/fixtures/components/invalid-foldable/request.blade.php
@blaze

<div>
    Current URL: {{ request()->url() }}
</div>
